--- a/src/component/admin/style.css
+++ b/src/component/admin/style.css
@@ -10,7 +10,7 @@ http://creativecommons.org/licenses/by/3.0/
 ------------------------------------------------*/
 body {
     font-family: 'Open Sans', sans-serif;
-    background: #3E3E3E;
+    /* background: #3E3E3E; */
 }
 
 #wrapper {
