--- a/src/component/layout/nav/Nav.css
+++ b/src/component/layout/nav/Nav.css
@@ -101,3 +101,16 @@
     object-fit: cover;
     border-radius: 10px;
 }
+
+.title-logo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.14);
+}
+
+.crayons-btn{
+    border: none;
+    background: white;
+}
