--- a/src/component/page/tags/Tags.css
+++ b/src/component/page/tags/Tags.css
@@ -32,7 +32,15 @@
 
 .txt-detail-tags {
     font-size: 15px;
-    margin-top: 15px;
+    margin: 0 auto;
+    display: -webkit-box;
+    max-width: 400px;
+    height: 16px*1.3*3; /* Fallback for non-webkit */
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 
 .search-title__tags{
