--- a/src/index.css
+++ b/src/index.css
@@ -214,31 +214,37 @@
     z-index: 100;
     margin: auto;
   }
-  .link-create, .link-login{
+
+  .link-create,
+  .link-login {
     font-size: 14px !important;
     padding: 5px 8px !important;
     margin-left: 6px !important;
   }
+
   .login {
-width: 100% !important;
-}
-.txt-box__formLogin{
-  font-size: 16px !important;
-}
-.input-box__formLogin {
-  margin-bottom: 12px !important;
-  padding: 8px !important;
-  font-size: 16px !important;
-}
-.show-search{
-  display: block !important;
-  position: absolute !important;
-  top: 100%;
-z-index: 1000;
-background: white;
-width: auto !important;
-height: auto!important;
-}
+    width: 100% !important;
+  }
+
+  .txt-box__formLogin {
+    font-size: 16px !important;
+  }
+
+  .input-box__formLogin {
+    margin-bottom: 12px !important;
+    padding: 8px !important;
+    font-size: 16px !important;
+  }
+
+  .show-search {
+    display: block !important;
+    position: absolute !important;
+    top: 100%;
+    z-index: 1000;
+    background: white;
+    width: auto !important;
+    height: auto !important;
+  }
 }
 
 @media screen and (max-width: 374px) {
